--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h1{
     border: 2px solid black;
     border-radius: 8px;
     margin: auto;
-    height: 60vh;
+    height: 55vh;
     padding: 33px;
     overflow-y: auto;
     margin-bottom: 23px;
@@ -74,11 +74,18 @@ h1{
     font-weight: bold;
 }
 .btn:hover{
-    background: rgb(7, 187, 7);
+    /* background: rgb(7, 187, 7); */
+    background: #09992d;
     color: white;
 }
 .foot{
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 30px;
     text-align: center;
     font-family: cursive;
+}
+
+.foot a{
+    text-decoration: none;
+    color: #1a09d6;
 }
